--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6,9 +6,10 @@
 
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 html {
-  font-family: sans-serif;
+  font-family: 'Pathway Gothic One', sans-serif;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
+
 }
 body {
   margin: 0;
@@ -358,7 +359,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: inherit;
+  font-family: Pathway Gothic;
   font-weight: 500;
   line-height: 1.1;
   color: inherit;
