--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -14,18 +14,19 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 
 .intro-header {
-	padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+	padding-top: 1px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
 	padding-bottom: 40px;
 	color: #f8f8f8;
 	background: url(../img/intro-bg.jpg) no-repeat center center;
 	background-size: cover;
 	text-align: center;
+    background-attachment: fixed;
 }
 
 .intro-message {
 	position: relative;
-	padding-top: 20%;
-	padding-bottom: 20%;
+	padding-top: 15%;
+	padding-bottom: 10%;
 }
 
 .intro-message > h1 {
